tests/cases/compiler-development/artifact/errors/diagnostic-trait-impl-receiver-mismatch.diagnostic
diagnostic error code=T0001 family=type message="method 'score' parameter 1 type mismatch: expected ref i64, got i64" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-impl-receiver-mismatch.ari" display="tests/cases/traits/errors/trait-impl-receiver-mismatch.ari" bytes=161
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-impl-receiver-mismatch.ari" line=6 column=12 end_line=6 end_column=16 byte_start=89 byte_end=93 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-impl-receiver-mismatch.ari:6:12\n   |\n 6 |   fn score(self) -> i64 {\n   |            ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-impl-receiver-mismatch.ari" line=2 column=18 end_line=2 end_column=21 byte_start=34 byte_end=37 message="trait method 'score' parameter 1 expects ref i64"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-impl-receiver-mismatch.ari:2:18\n   |\n 2 |   fn score(self: ref Self) -> i64\n   |                  ^^^"
  Note index=0 location=none message="trait impl methods must match the trait declaration exactly"
  Help index=0 location=none message="change this impl parameter to ref i64 or update the trait declaration"
